개발 환경 초기화

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,14 @@
 *.onnx
 configs/*.yaml
 !configs/settings.yaml.sample
+
+# AI Agent & Editor Traces
+.cursorrules
+.cursor/
+.agents/
+.agent/
+_agents/
+_agent/
+.gemini/
+.aichat/
+docs/*_ki.md
